--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 :root {
+  --nav-bar-height: 4rem;
   --primary-color: rgb(252, 252, 252);
   --primary-color-st: rgba(252, 252, 252, 0.4);
   --secondary-color: rgb(23, 23, 23);
